--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
    ========================================================================== */
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
 html {
   color: #222;
@@ -20,9 +21,41 @@ html {
 }
 
 body {
-  font-family: 'Lato', sans-serif !important;
-  padding: 0 !important;
-  margin: 0 !important;
+  padding: 0;
+  margin: 0;
+}
+
+body, html {
+  -webkit-font-smoothing: antialiased;
+  background-color: #fff;
+  font-size: 14px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  line-height: 1.4;
+  letter-spacing: .015rem;
+  color: #4F4F4D;
+  position: relative;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+@media only screen and (min-width: 768px) {
+  body, html {
+    font-size: 100%;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  body, html {
+    font-size: 15px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  body, html {
+    font-size: 100%;
+    line-height: 1.5;
+  }
 }
 
 /*
@@ -502,4 +535,43 @@ textarea {
   -ms-transform: translateY(0);
   -o-transform: translateY(0);
   transform: translateY(0);
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+  margin: 0;
+  font-size: initial;
+  font-weight: normal;
+}
+
+@media only screen and (min-width: 768px) {
+  .section-title {
+    margin-bottom: 50px;
+  }
+}
+
+.section-title {
+  font-size: 1.375rem;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  letter-spacing: .03rem;
+  margin-bottom: 25px;
+}
+
+p {
+  margin: 0;
+  max-width: 800px;
+}
+
+.copy-wrapper p {
+  margin-bottom: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+  .copy-wrapper p {
+    margin-bottom: 20px;
+  }
+}
+
+.copy-wrapper p:last-child {
+  margin-bottom: 0;
 }
